# ai-for-developers-project-386

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  release-please-config.json  render.yaml
.github/workflows/: ci.yml  release-please.yml
.husky/: commit-msg
backend/: .bandit  .coverage  .coveragerc  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: bookings.py  dto.py  health.py  mappers.py  meeting_types.py  slots.py
backend/app/domain/: dto.py  objects.py  result.py
backend/app/infrastructure/: database.py  di.py
backend/app/repositories/: booking_repository.py  health.py  meeting_type_repository.py
backend/app/services/: propose_slot_dates_service.py  slot_service.py
backend/app/usecases/: create_booking_use_case.py  create_meeting_type_use_case.py  find_slots_use_case.py  health.py  list_all_meeting_type_use_case.py  list_upcoming_bookings_use_case.py
backend/tests/: conftest.py  test_main.py
backend/tests/api/: test_bookings_api.py  test_mappers.py  test_meeting_types_api.py  test_slots_api.py
backend/tests/repositories/: conftest.py  test_booking_repository.py  test_health_repository.py  test_meeting_type_repository.py
backend/tests/services/: test_propose_slot_dates_service.py  test_slot_service.py
backend/tests/usecases/: test_create_booking_use_case.py  test_create_meeting_type_use_case.py  test_find_slots_use_case.py  test_health.py  test_list_all_meeting_type_use_case.py  test_list_upcoming_bookings_use_case.py
docker/: backend.Dockerfile  frontend.Dockerfile
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: bookings.ts  client.ts  meetingTypes.ts  slots.ts
frontend/src/components/: HealthIndicator.vue
frontend/src/pages/: HomePage.vue
frontend/src/pages/admin/: AdminLayout.vue  BookingsPage.vue  CreateMeetingTypePage.vue  MeetingTypesPage.vue
frontend/src/router/: index.ts
frontend/src/stores/: bookings.ts  health.ts  meetingTypes.ts
frontend/src/types/: generated.ts
frontend/src/utils/: date.ts
frontend/test-results/: .last-run.json
frontend/tests/: App.spec.ts  setup.ts
frontend/tests/api/: bookings.spec.ts  client.spec.ts  meetingTypes.spec.ts  slots.spec.ts
frontend/tests/components/: HealthIndicator.spec.ts
frontend/tests/e2e/: guest-booking.spec.ts  health.spec.ts  playwright.config.ts
frontend/tests/pages/: HomePage.spec.ts
frontend/tests/router/: index.spec.ts
frontend/tests/stores/: bookings.spec.ts  health.spec.ts  meetingTypes.spec.ts
frontend/tests/utils/: date.spec.ts
log_prompts/: 01_initial_prompt.md  02_typespec_domain_model.md  03_feature-01-create_meeting_type.md  04_feature-02-booking_workflow.md  05_agents_md.md  06_feature-03-view_bookings.md
typespec/: package-lock.json  package.json  tspconfig.yaml
typespec/src/: main.tsp
typespec/src/models/: booking.tsp  health.tsp  meeting-type.tsp  result.tsp  slot.tsp
typespec/src/routes/: bookings.tsp  health.tsp  meeting-types.tsp  slots.tsp
(+8 files in other folders)
