[tool.poetry]
name = "calcom-backend"
version = "0.1.0"
description = "CalCom clone backend"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
pydantic = "^2.10"
motor = "^3.7"
uvicorn = {extras = ["standard"], version = "^0.34"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.25"
httpx = "^0.28"
ruff = "^0.9"
testcontainers = "^4.10"
pre-commit = "^4.6.0"
mypy = "^2.1.0"
bandit = "^1.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E", "F",     # pycodestyle, pyflakes
    "I",          # isort
    "N",          # pep8-naming
    "W",          # pycodestyle warnings
    "UP",         # pyupgrade
    "ASYNC",      # flake8-async
    "B",          # flake8-bugbear
    "SIM",        # flake8-simplify
    "RET",        # flake8-return
    "ARG",        # flake8-unused-arguments
    "PT",         # flake8-pytest-style
    "PL",         # pylint
    "RUF",        # ruff-specific
    "C4",         # flake8-comprehensions
    "T20",        # flake8-print
    "LOG",        # flake8-logging
    "PIE",        # flake8-pie
    "TRY",        # tryceratops
    "FLY",        # flynt
    "PTH",        # flake8-pathlib
    "FURB",       # refurb
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR", "T20"]
"app/api/v1/*" = ["B008"]
"app/infrastructure/di.py" = ["B008"]
"app/main.py" = ["ARG001"]
"app/repositories/health.py" = ["TRY300"]
"app/infrastructure/database.py" = ["TRY003", "TRY300"]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.run]
source = ["app"]
omit = ["*/__pycache__/*", "tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = ["pragma: no cover", "if __name__ == .__main__.:", "raise NotImplementedError", "pass"]

[tool.mypy]
python_version = "3.12"
strict = true
show_error_codes = true
warn_unused_ignores = true
exclude = ["tests/"]
plugins = ["pydantic.mypy"]

[tool.pydantic_mypy]
init_forbid_extra = true
init_typed = true
warn_typed_defaults = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
